--- a/bundesliga/requirements.txt
+++ b/bundesliga/requirements.txt
@@ -7,3 +7,6 @@ notebook
 scikit-learn~=1.5.1
 ruff
 pre-commit
+aesara
+numpy==1.26.4 # aesera needs vs <2.0
+hypothesis # unit test library ( check if needed / good lib? - used by numpy.test() )
