--- a/bundesliga/pyproject.toml
+++ b/bundesliga/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "notebook",
     "kedro[jupyter]~=0.19.10",
     "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
+    "kedro_datasets_experimental[netcdf-NetcdfDataSet]",
     "kedro-viz>=6.7.0",
     "scikit-learn~=1.5.1",
     "seaborn~=0.12.1"
