--- a/bundesliga/conf/base/catalog.yml
+++ b/bundesliga/conf/base/catalog.yml
@@ -1,7 +1,3 @@
-
-
-
-
 D1_24-25:
   type: pandas.CSVDataset
   filepath: data/01_raw/D1_24-25.csv
@@ -20,9 +16,17 @@ model_input_table:
   filepath: data/05_model_input/model_input_table.pq
 
 
-model_1_idata:
+active_modelling_pipeline.model_1_idata:
   type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/06_models/model1_idata.nc
+  filepath: data/06_models/model_1_idata_active.nc
+  save_args:
+    mode: a
+  load_args:
+    decode_times: False
+  
+candidate_modelling_pipeline.model_1_idata:
+  type: kedro_datasets_experimental.netcdf.NetCDFDataset
+  filepath: data/06_models/model_1_idata_candidate.nc
   save_args:
     mode: a
   load_args:
