--- a/bundesliga/conf/base/parameters_data_science.yml
+++ b/bundesliga/conf/base/parameters_data_science.yml
@@ -14,11 +14,11 @@ active_modelling_pipeline:
       - 'home_goals'
       - 'away_goals'
     model_config:
-      offence_mu_prior: 0.0
-      offence_tau_prior: 1.0
-      defence_mu_prior: 0.0
-      defence_tau_prior: 1.0
-      shape_priors: 18
+      prior_params:
+        off_mu: 0.0
+        off_tau: 1.0
+        def_mu: 0.0
+        def_tau: 1.0
     sampler_config:
       chains: 1
       draws: 2000
@@ -42,6 +42,39 @@ candidate_modelling_pipeline:
       defence_mu_prior: 0.0
       defence_tau_prior: 1.0
       shape_priors: 18
+    sampler_config:
+      chains: 1
+      draws: 2000
+      tune: 200 # toDo: 10% of draws
+      target_accept: 0.95
+      random_seed: 42
+
+
+test_modelling_pipeline:
+  model_parameters:
+    test_size: 0.2
+    random_state: 42
+    features: 
+      - 'home_id'
+      - 'away_id'
+    targets:
+      - 'home_goals'
+      - 'away_goals'
+    model_config:
+      prior_params:
+        score: 
+          tau: 1.0
+          mu: 0.0
+        offence_defence_diff: 
+          tau: 1.0
+          mu: 1.5
+        home_advantage: 
+          tau: 10.0
+          mu: 0.0
+        weights: 
+          tau: 100.0
+          mu: [0.0, 0.25, -0.25]
+          shape: 3.0
     sampler_config:
       chains: 1
       draws: 2000
