--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         
         {
-            "name": "Python: Kedro Run",
+            "name": "-processing pipeline",
+            "type": "debugpy",
+            "request": "launch",
+            "console": "integratedTerminal",
+            "module": "kedro",
+            "args": ["run", "--pipeline", "data_processing"],
+            "cwd": "${workspaceFolder}/bundesliga",
+            "justMyCode": false
+            // Any other arguments should be passed as a comma-seperated-list
+            // e.g "args": ["run", "--pipeline", "pipeline_name"]
+        },{
+            "name": "-datascience pipeline",
             "type": "debugpy",
             "request": "launch",
             "console": "integratedTerminal",
