remove session_store.db

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ example/**
 bundesliga/notebooks/test2.ipynb
 bundesliga/notebooks/testing.ipynb
 bundesliga/session_store.db
+bundesliga/session_store.db
