--- a/bundesliga/conf/base/catalog.yml
+++ b/bundesliga/conf/base/catalog.yml
@@ -3,95 +3,125 @@ D1_24-25:
   filepath: data/01_raw/D1_24-25.csv
 
 goals:
-  type: pandas.ParquetDataset
-  filepath: data/02_intermediate/goals.pq
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: pandas.ParquetDataset
+    filepath: data/02_intermediate/goals.pq
 
 team_lexicon:
-  type: pandas.ParquetDataset
-  filepath: data/03_primary/team_lexicon.pq
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: pandas.ParquetDataset
+    filepath: data/03_primary/team_lexicon.pq
 
 vectorized_data:
-  type: pandas.ParquetDataset
-  filepath: data/03_primary/vectorized_data.pq
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: pandas.ParquetDataset
+    filepath: data/03_primary/vectorized_data.pq
 
 feature_data:
   type: pandas.ParquetDataset
   filepath: data/04_feature/feature_data.pq
 
 x_data:
-  type: pandas.ParquetDataset
-  filepath: data/05_model_input/x_data.pq
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: pandas.ParquetDataset
+    filepath: data/05_model_input/x_data.pq
 
 y_data:
-  type: pandas.ParquetDataset
-  filepath: data/05_model_input/y_data.pq
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: pandas.ParquetDataset
+    filepath: data/05_model_input/y_data.pq
 
 toto:
-  type: pandas.ParquetDataset
-  filepath: data/05_model_input/toto.pq
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: pandas.ParquetDataset
+    filepath: data/05_model_input/toto.pq
   
 active_modelling_pipeline.fit_idata:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/06_models/model_1_idata_active.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/06_models/model_1_idata_active.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
 
 active_modelling_pipeline.offence:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/07_model_output/offence.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/07_model_output/offence.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
 active_modelling_pipeline.defence:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/07_model_output/defence.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/07_model_output/defence.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
 
 active_modelling_pipeline.offence_means:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/07_model_output/offence_means.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/07_model_output/offence_means.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
 active_modelling_pipeline.defence_means:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/07_model_output/defence_means.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/07_model_output/defence_means.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
 
 offence_defence_plot:
-  type: matplotlib.MatplotlibWriter
-  filepath: data/08_reporting/offence_defence_plot.png
-  save_args:
-    format: png
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: matplotlib.MatplotlibWriter
+    filepath: data/08_reporting/offence_defence_plot.png
+    save_args:
+      format: png
 
 goal_diffs_plot:
-  type: matplotlib.MatplotlibWriter
-  filepath: data/08_reporting/goal_diffs_plot.png
-  save_args:
-    format: png
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: matplotlib.MatplotlibWriter
+    filepath: data/08_reporting/goal_diffs_plot.png
+    save_args:
+      format: png
 
 candidate_modelling_pipeline.model_1_idata:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/06_models/model_1_idata_candidate.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/06_models/model_1_idata_candidate.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
 
 candidate_modelling_pipeline.model_1_samples:
-  type: kedro_datasets_experimental.netcdf.NetCDFDataset
-  filepath: data/06_models/model_1_samples_candidate.nc
-  save_args:
-    mode: a
-  load_args:
-    decode_times: False
+  type: kedro_mlflow.io.artifacts.MlflowArtifactDataset
+  dataset:
+    type: kedro_datasets_experimental.netcdf.NetCDFDataset
+    filepath: data/06_models/model_1_samples_candidate.nc
+    save_args:
+      mode: a
+    load_args:
+      decode_times: False
