--- a/bundesliga/requirements.txt
+++ b/bundesliga/requirements.txt
@@ -3,6 +3,8 @@ jupyterlab>=3.0
 kedro-datasets>=3.0
 kedro-viz>=6.7.0
 kedro[jupyter]~=0.19.10
+kedro-mlflow
+mlflow
 notebook
 scikit-learn~=1.5.1
 ruff
