--- a/bundesliga/conf/base/parameters.yml
+++ b/bundesliga/conf/base/parameters.yml
@@ -8,18 +8,16 @@
 # # The model_options below are "base" options for all pipelines
 
 model_options:
-  model: ""
+  model: "" 
+  engine: ""
+  start_day: 40
+  walk_forward: 1
   test_size: 0.2
   random_seed: 42
-  model_config:
-    prior_params:
+  model_config: #define in model specific config
+  sampler_config: #define in model specific config
 
-  sampler_config:
-    chains: 2
-    draws: 2000
-    tune: 200 # toDo: 10% of draws
-    target_accept: 0.85
-    random_seed: 42
+# -------------------------------
   plot_params:
     max_goals: 8
     team_1: 'Augsburg'
@@ -30,24 +28,30 @@ model_options:
 
 
 pymc:
-  # base:
-  #   _overrides:
-  #   model_options: ${...model_options}
+  _overrides_base:
+    engine: "pymc"
+    model_config:
+    sampler_config:
+      chains: 1
+      draws: 1000
+      tune: 500 # toDo: 10% of draws
+      target_accept: 0.95
+      random_seed: 42
   
-  f1:
+  simple:
     _overrides:
-      model: "f1"
+      model: "simple"
       model_config:
         prior_params:
           off_mu: 1.75
           off_tau: 1.0
           def_mu: 0.0
           def_tau: 1.0
-    model_options: ${merge:${...model_options},${._overrides}}
+    model_options: ${merge:${merge:${...model_options},${.._overrides_base}},${._overrides}}
 
-  f2:
+  toto:
     _overrides:
-      model: "f2"
+      model: "toto"
       model_config:
         prior_params:
           score:
@@ -62,21 +66,23 @@ pymc:
           weights:
             tau: 100.0
             mu: [0.0, 0.25, -0.25]
-    model_options: ${merge:${...model_options},${._overrides}}
+    model_options: ${merge:${merge:${...model_options},${.._overrides_base}},${._overrides}}
 
 
-pymc2:
-  # base:
-  #   _overrides:
-  #   model_options: ${...model_options}
-  
-  f1:
+pyro:
+  _overrides_base:
+    engine: "pyro"
+    model_config:
+      betas: [0.95, 0.999]
+      learning_rate: 0.005
+      prior_diff: 1.5
+
+  simple:
     _overrides:
-      model: "f1"
-      model_config:
-        prior_params:
-          off_mu: 1.75
-          off_tau: 1.0
-          def_mu: 0.0
-          def_tau: 1.0
-    model_options: ${merge:${...model_options},${._overrides}}
+      model: "simple"
+    model_options: ${merge:${merge:${...model_options},${.._overrides_base}},${._overrides}}
+
+  toto:
+    _overrides:
+      model: "toto"
+    model_options: ${merge:${merge:${...model_options},${.._overrides_base}},${._overrides}}
