--- a/bundesliga/requirements.txt
+++ b/bundesliga/requirements.txt
@@ -13,3 +13,4 @@ aesara
 numpy==1.26.4 # aesera needs vs <2.0
 hypothesis # unit test library ( check if needed / good lib? - used by numpy.test() )
 pyro-ppl
+statsd # for logging
